--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,10 +1,9 @@
 .navbar {
   background: #41003a;
-  height: 80px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
   position: sticky;
   top: 0;
   z-index: 999;
@@ -14,29 +13,31 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
-  max-width: 1500px;
+  height: 70px;
+  background: firebrick;
 }
 
 .navbar-logo {
-  color: #fff;
   justify-self: start;
-  margin-left: 20px;
+   {
+    /*background-color: fuchsia;*/
+  }
+  margin-left: 0px;
   cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
+  height: 30px;
   display: flex;
-  align-items: center;
-}
-
-.fa-typo3 {
-  margin-left: 0.5rem;
-  font-size: 1.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(25%, 50%);
 }
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(6, auto);
+   {
+    /*background-color: aqua;*/
+  }
   grid-gap: 10px;
   list-style: none;
   text-align: center;
@@ -46,25 +47,33 @@
 }
 
 .nav-item {
-  height: 80px;
+  height: 70px;
+  background-color: #41003a;
 }
 
 .nav-links {
-  color: #fff;
+  color: #ffe1cc;
   display: flex;
   align-items: center;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
+  font-size: 0.8rem;
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  border-bottom: 2px solid #ffe1cc;
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #fff;
+  color: #ffe1cc;
+  font-size: 1.2rem;
+  margin-left: 60px;
+  margin-top: -40px;
+   {
+    /*background-color: gold;*/
+  }
 }
 
 .nav-links-mobile {
@@ -84,18 +93,17 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
   }
 
   .nav-menu.active {
-    background: #242222;
+    background: #41003a;
     left: 0;
-    opacity: 1;
+    opacity: 0.9;
     transition: all 0.5s ease;
     z-index: 1;
   }
@@ -108,16 +116,9 @@
   }
 
   .nav-links:hover {
-    background-color: #fff;
-    color: #242424;
+    background-color: #290025;
+    color: #ffede1;
     border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
   }
 
   .menu-icon {
@@ -131,8 +132,8 @@
   }
 
   .fa-times {
-    color: #fff;
-    font-size: 2rem;
+    color: #ffede1;
+    font-size: 1.2rem;
   }
 
   .nav-links-mobile {
@@ -151,8 +152,8 @@
   }
 
   .nav-links-mobile:hover {
-    background: #fff;
-    color: #242424;
+    background-color: #290025;
+    color: #ffede1;
     transition: 250ms;
   }
 }
