--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -14,7 +14,9 @@
   justify-content: center;
   align-items: center;
   height: 70px;
-  background: firebrick;
+   {
+    /*background: firebrick;*/
+  }
 }
 
 .navbar-logo {
@@ -69,8 +71,7 @@
 .fa-bars {
   color: #ffe1cc;
   font-size: 1.2rem;
-  margin-left: 60px;
-  margin-top: -40px;
+  margin-left: 55px;
    {
     /*background-color: gold;*/
   }
@@ -124,16 +125,18 @@
   .menu-icon {
     display: block;
     position: absolute;
+    background-color: gray;
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     cursor: pointer;
   }
 
   .fa-times {
     color: #ffede1;
     font-size: 1.2rem;
+    margin-left: 60px;
   }
 
   .nav-links-mobile {
