--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -36,7 +36,7 @@ h1 {
   display: flex;
   flex-flow: column;
   width: 100%;
-  box-shadow: 0 6px 20px #41003a;
+  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   border-radius: 10px;
@@ -48,13 +48,15 @@ h1 {
   position: relative;
   width: 100%;
   padding-top: 67%;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
+/*
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
 }
+
 
 .cards__item__pic-wrap::after {
   content: attr(data-category);
@@ -69,7 +71,7 @@ h1 {
   background-color: #1f98f4;
   box-sizing: border-box;
 }
-
+*/
 .cards__item__img {
   position: absolute;
   top: 0;
@@ -85,10 +87,11 @@ h1 {
   transition: all 0.2s linear;
 }
 
+/*
 .cards__item__img:hover {
   transform: scale(1.1);
 }
-
+*/
 .cards__item__info {
   padding: 20px 30px 30px;
 }
