--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -2,6 +2,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    border: 1px solid #41003a;
    /* outline: none;*/
     cursor: pointer;
 }
