--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -1,14 +1,60 @@
 .color{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     border: 1px solid #41003a;
    /* outline: none;*/
     cursor: pointer;
 }
 
-.color_with_text{
+.color_container{
     display: inline-block;
     text-align: center;
     margin-right: 3%;
 }
+
+.product__container{
+    //background-color: salmon;
+    width: 100%;
+    max-width: 1000px;
+    margin: 30px auto 30px auto;
+
+    display: flex;
+    flex-wrap: wrap;
+    vertical-align: top;   
+    justify-content: center;
+
+}
+
+.product__section{
+    //background-color: silver;
+    width: 50%;
+    min-width: 300px;
+    display: flex;
+    flex-flow: column;
+}
+
+.product__section__content{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.product__information{
+    margin-left: 5%;
+}
+
+.size_button {
+    outline: 0;
+    color: #ffe1cc;
+    background: #41003a;
+    padding: 0.5rem 2rem;
+    line-height: 1;
+    border: transparent;
+    border-radius: 2rem;
+    cursor: pointer;
+    font-size: 16px;
+    max-width: 30%;
+    
+  }
+  
