--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -14,8 +14,8 @@
 }
 
 .product__container{
-    //background-color: salmon;
-    width: 100%;
+    /*background-color: salmon;*/
+    width: 90%;
     max-width: 1000px;
     margin: 30px auto 30px auto;
 
@@ -27,7 +27,7 @@
 }
 
 .product__section{
-    //background-color: silver;
+    /*background-color: silver;*/
     width: 50%;
     min-width: 300px;
     display: flex;
@@ -42,6 +42,10 @@
 
 .product__information{
     margin-left: 5%;
+}
+
+.bottom__margin{
+    margin-bottom: 1rem;
 }
 
 .size_button {
