--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -35,13 +35,17 @@
 }
 
 .product__section__content{
+    display: block;
     max-width: 100%;
     max-height: 100%;
+    width: auto;
+    height: auto;
     object-fit: contain;
 }
 
 .product__information{
-    margin-left: 5%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
 }
 
 .bottom__margin{
