--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -17,37 +17,37 @@
 
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-between;
-
-  //flex-flow: column;
-  //align-items: center;
+  /* flex-flow: column;
+  align-items: center;*/
   
 }
 
 
 .cards__items {
   background-color: rgb(228, 159, 111);
-  width: 100%;
+  width: auto;
   max-width: 1000px;
   list-style: none;
   margin: 10px 0px 30px 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  
 }
 
 .cards__item__link {
   background-color: silver;
   display: flex;
+  justify-content: left;
   flex-flow: column;
   width: 320px;
   height: 400px;
   margin: 5px;
-  //box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  /*box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   //-webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   //filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  //border-radius: 10px;
+  //border-radius: 10px;*/
   overflow: hidden;
   text-decoration: none;
 }
@@ -55,7 +55,8 @@
 .cards__item__pic-wrap {
   position: relative;
   width: 100%;
-  padding-top: 80%;
+  height: 100%;
+  /*padding-top: 90%;*/
   /*overflow: hidden;*/
 }
 
