--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -55,6 +55,9 @@
   background: salmon;
   color: #fff;
   font-size: 16px;
+  /*width: 33px;*/
+  /*height: 33px;*/
+  /*padding: 8px 8px;*/
 }
 
 @media screen and (max-width: 820px) {
