--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -8,7 +8,8 @@
   border-radius: 2rem;
   cursor: pointer;
   font-size: 16px;
-
+  text-decoration: none;
+  /*
   &:focus {
     box-shadow: 0 0 0 10rem rgba(0, 109, 255, 0.4);
   }
@@ -25,4 +26,10 @@
       background-color: #004eb8;
     }
   }
+  */
+}
+
+.btn:hover{
+  text-decoration: underline;
+  color: #ffe1cc;
 }
