--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -9,6 +9,7 @@
   cursor: pointer;
   font-size: 16px;
   text-decoration: none;
+  max-width: 30%;
   /*
   &:focus {
     box-shadow: 0 0 0 10rem rgba(0, 109, 255, 0.4);
