--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,7 +1,7 @@
 .table{
     width: 90%;
     max-width: 1000px;
-    margin-left: 5%;
+    margin: 20px 5% 20px 5%;
 }
 .size_row{
     width: 90%;
