--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,7 +1,7 @@
 .table{
-    width: 90%;
+    width: 100%;
     max-width: 1000px;
-    margin: 20px 5% 20px 5%;
+    margin: 20px 0 20px 0;
 }
 .size_row{
     width: 90%;
