--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -10,29 +10,39 @@
 
 .cards__container {
   
-  background-color: salmon;
+  /*background-color: salmon;*/
   width: 90%;
   max-width: 1000px;
   margin: 30px auto 30px auto;
+  margin: auto;
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  /* flex-flow: column;
+  /*justify-content: space-between;*/
+  /*flex-direction: start;*/
+  /*flex-flow: column;
   align-items: center;*/
+
+ 
   
 }
 
 
 .cards__items {
   background-color: rgb(228, 159, 111);
-  width: auto;
+  width: fit-content;
   max-width: 1000px;
   list-style: none;
   margin: 10px 0px 30px 0px;
-  display: flex;
-  flex-wrap: wrap;
+
+  /*display: flex;
+  flex-wrap: wrap;*/
   justify-content: center;
+  
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+
   
 }
 
@@ -123,8 +133,17 @@
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 400px) {
   .cards__item {
     margin-bottom: 2rem;
+    align-items: center;
+    width:min-content;
+
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .cards__items {
+    justify-content: left;
   }
 }
