--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -22,14 +22,12 @@
   /*flex-direction: start;*/
   /*flex-flow: column;
   align-items: center;*/
-
- 
   
 }
 
 
 .cards__items {
-  background-color: rgb(228, 159, 111);
+  /*background-color: rgb(228, 159, 111);*/
   width: fit-content;
   max-width: 1000px;
   list-style: none;
@@ -42,8 +40,6 @@
   display:flex;
   flex-direction:row;
   flex-wrap:wrap;
-
-  
 }
 
 .cards__item__link {
@@ -70,27 +66,6 @@
   /*overflow: hidden;*/
 }
 
-/*
-.fade-img {
-  animation-name: fade-img;
-  animation-duration: 2s;
-}
-
-
-.cards__item__pic-wrap::after {
-  content: attr(data-category);
-  position: absolute;
-  bottom: 0;
-  margin-left: 10px;
-  padding: 6px 8px;
-  max-width: calc((100%) - 60px);
-  font-size: 12px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #1f98f4;
-  box-sizing: border-box;
-}
-*/
 .cards__item__img {
   position: absolute;
   top: 0;
@@ -102,23 +77,32 @@
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  object-fit: cover;
+  /*object-fit: cover;*/
   transition: all 0.2s linear;
 }
 
-/*
-.cards__item__img:hover {
-  transform: scale(1.1);
-}
-*/
 .cards__item__info {
-  padding: 20px 30px 30px;
+  padding: 0px 30px 0px;
+  background-color: whitesmoke;
+  display:grid;
+  grid-template-columns: 3fr 2fr;
+  justify-content: center;
+  
 }
 
+.cards__item__title {
+  color: #550000;
+  font-size: 18px;
+  line-height: 24px;
+  grid-column: 1/3;
+}
+  
 .cards__item__text {
   color: #550000;
   font-size: 18px;
   line-height: 24px;
+  grid-column: 1/2;
+  
 }
 
 @media only screen and (min-width: 1200px) {
@@ -147,3 +131,30 @@
     justify-content: left;
   }
 }
+
+/*
+.fade-img {
+  animation-name: fade-img;
+  animation-duration: 2s;
+}
+
+
+.cards__item__pic-wrap::after {
+  content: attr(data-category);
+  position: absolute;
+  bottom: 0;
+  margin-left: 10px;
+  padding: 6px 8px;
+  max-width: calc((100%) - 60px);
+  font-size: 12px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #1f98f4;
+  box-sizing: border-box;
+}
+*/
+/*
+.cards__item__img:hover {
+  transform: scale(1.1);
+}
+*/
