--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -102,7 +102,7 @@
     margin: 10px 0px 30px 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: start;
   }
   
   .suggested__cards__item__link {
