--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -68,6 +68,18 @@
     max-width: 30%;
   }
   
+.dropdown{
+  display: flex;
+  flex-direction: row;
+  width: 3rem;
+  height: 2rem;
+  padding: 5px;
+  font-size: 16px;
+  color: #550000;
+  background-color: #ffe1cc;
+  border: #fff;
+  text-align: center;
+ }
 
   /*------------------------------------------------------*/
   .cards {
