--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
 }
-
 
 .Home,
 .AboutUs,
@@ -16,44 +15,38 @@
     justify-content: center;
     font-size: 3rem;*/
   height: auto;
-  color: #550000; 
+  color: #550000;
   background: #fcf3f5;
   padding: 50px 0%;
 }
-.link{
+.link {
   color: #550000;
 }
 
 .Home {
-  text-align:center;
+  text-align: center;
 }
 
 .AboutUs {
-  
 }
 
 .Product {
-  
 }
 
 .Catalogue {
-  
 }
 
-
-.SizeTable{
-  
+.SizeTable {
 }
-.Content{
-    /*background-color: blue;*/
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    padding-top: 20px;
+.Content {
+  background-color: blue;
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  padding-top: 20px;
 
-    display: flex;
-    flex-direction: column;
-    vertical-align: top;   
-    justify-content: center;
-    
+  display: flex;
+  flex-direction: column;
+  vertical-align: top;
+  justify-content: center;
 }
