--- a/src/components/ImageGalleryProduct.css
+++ b/src/components/ImageGalleryProduct.css
@@ -1,6 +1,6 @@
 img{
     display: block;
-    cursor: pointer;
+    
 }
 
 
@@ -14,7 +14,7 @@ img{
     width: 300px;
     height: 300px;
     margin: 0 auto;
-    border: 4px solid black;
+    /*border: 4px solid black;*/
 }
 
 .gallery__container .gallery__imgContainer{
@@ -29,4 +29,5 @@ img{
     width: 100px;
     height: 100px;
     margin: 5px 0;
+    cursor: pointer;
 }
