--- a/src/components/ImageGalleryProduct.css
+++ b/src/components/ImageGalleryProduct.css
@@ -1,33 +1,33 @@
-img{
-    display: block;
-    
+img {
+  display: block;
 }
 
-
-.gallery__container{
-    margin: auto;
-    width: 100%;
-    max-width: 540px;
+.gallery__container {
+  /*background-color: thistle;*/
+  margin: 0;
+  width: 100%;
+  max-width: 540px;
 }
 
-.gallery__container .gallery__selected__image{
-    width: 300px;
-    height: 300px;
-    margin: 0 auto;
-    /*border: 4px solid black;*/
+.gallery__container .gallery__selected__image {
+  
+  width: 340px;
+  height: auto;
+  margin: 0 auto;
+  /*border: 4px solid black;*/
 }
 
-.gallery__container .gallery__imgContainer{
+.gallery__container .gallery__imgContainer {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 40px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
-.gallery__container .gallery__imgContainer img{
-    width: 100px;
-    height: 100px;
-    margin: 5px 0;
-    cursor: pointer;
+.gallery__container .gallery__imgContainer img {
+  width: 110px;
+  height: auto;
+  margin: 0px 2.5px;
+  cursor: pointer;
 }
