--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -12,7 +12,6 @@
     column-gap: 15px;
     padding: 15px;
     width: auto;
-    width: auto;
     background-color: rgb(235, 219, 235);
     
 }
@@ -27,7 +26,13 @@
     padding: 15px;
     width: auto;
     width: auto;
-   background-color: thistle;
+    background-color: thistle;
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 800px) {
+    .table{
+        font-size: 14px;
+    }
+  }
