--- a/src/components/ImageGalleryProduct.css
+++ b/src/components/ImageGalleryProduct.css
@@ -10,17 +10,16 @@ img {
 }
 
 .gallery__container .gallery__selected__image {
-  
   width: 340px;
   height: auto;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   /*border: 4px solid black;*/
 }
 
 .gallery__container .gallery__imgContainer {
-  width: 100%;
+  width: 340px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding: 5px 0 0 0;
 }
@@ -28,6 +27,6 @@ img {
 .gallery__container .gallery__imgContainer img {
   width: 110px;
   height: auto;
-  margin: 0px 2.5px;
+  margin: 0px 0px;
   cursor: pointer;
 }
