--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -43,7 +43,7 @@
 }
 
 .cards__item__link {
-  /*background-color: silver;*/
+  background-color: white;
   display: flex;
   justify-content: left;
   flex-flow: column;
