--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -15,7 +15,7 @@
     font-size: 16px;
     color:#550000;
     border-radius: 15px;
-    length: auto;
+    width: auto;
     margin: 5px 30px;
     padding: 5px;
     border-color: #fff;
