Marta - link visible

--- a/src/components/Breadcrumbs.css
+++ b/src/components/Breadcrumbs.css
@@ -23,7 +23,7 @@ ul.breadcrumb li+li:before {
 /* Add a color to all links inside the list */
 ul.breadcrumb li a {
     color: #7d1f94;
-    text-decoration: none;
+    text-decoration: underline;
     padding: 2px;
 }
 
