--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -149,7 +149,14 @@
     overflow: hidden;
     text-decoration: none;
   }
-  
+
+  .suggested__cards__item__link:hover{
+    text-decoration: underline;
+  }
+  .suggested__cards__item__link:focus{
+    text-decoration: underline;
+  }
+
   .suggested__cards__item__pic-wrap {
     position: relative;
     width: 100%;
