--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -34,6 +34,10 @@
 
 .btn:hover{
   /*text-decoration: underline;*/
-  background-color: #290025;
+  background-color: #990975;
   color: #ffede1;
+}
+
+.btn:focus{
+  background-color: #990975;
 }
