Franc - Accessibility Table colour contrast

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -26,7 +26,8 @@
     padding: 15px;
     width: auto;
     width: auto;
-    background-color: thistle;
+    background-color: #41003a;
+    color: #ffede1;
     width: 100%;
     height: 100%;
 }
