--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,18 @@
   vertical-align: top;
   justify-content: center;
 }
+
+
+#skip-link {
+  background: #319795;
+  color: #fff;
+  font-weight: 700;
+  left: 50%;
+  padding: 4px;
+  position: absolute;
+  transform: translateY(-100%);
+}
+
+#skip-link:focus {
+  transform: translateY(0%);
+}
