--- a/src/components/ImageGalleryProduct.css
+++ b/src/components/ImageGalleryProduct.css
@@ -30,3 +30,7 @@ img {
   margin: 0px 0px;
   cursor: pointer;
 }
+
+.gallery__container .gallery__imgContainer img:focus{
+  border: 4px solid #550000 !important;
+}
