--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -96,7 +96,9 @@
     opacity: 1;
     transition: all 0.5s ease;
   }
-
+  .nav-menu.hidden{
+    visibility: hidden;
+  }
   .nav-menu.active {
     background: #41003a;
     left: 0;
