Marta - breadcrumb position changed

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 .SizeTable {
 }
 .Content {
-  /*background-color: rgb(199, 199, 243);*/
+  background: #fcf3f5;
   width: 90%;
   max-width: 1000px;
   margin: auto;
