--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -158,7 +158,7 @@
     margin: 10px 0px 30px 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
   }
   
   .suggested__cards__item__link {
