--- a/src/components/ProductCardComponents.css
+++ b/src/components/ProductCardComponents.css
@@ -236,3 +236,11 @@
     }
   }
   
+  .display__inline-block{
+    display: inline-block;
+  }
+
+  .img__center{
+    /**/
+    text-align: center;
+  }
