Marta - footer text align

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -43,6 +43,7 @@
 
 .CustomerService {
   /*background: fuchsia;*/
+  text-align: center;
   color: #ffe1cc;
   margin-top: 16px;
   margin-bottom: 16px;
