--- a/src/components/Catalogue.css
+++ b/src/components/Catalogue.css
@@ -114,6 +114,16 @@
   
 }
 
+.card_left{
+  display:inline-block;
+  margin: 0px 0 0 5px;
+}
+
+.card_right{
+  display:inline-block;
+  margin: 0px 0 0 5px;
+}
+
 @media only screen and (min-width: 1200px) {
   .content__blog__container {
     width: 84%;
